<resources>
    <string name="app_name">小额贷</string>

    <string name="splash_skip">%1$s 跳过</string>
    <string name="guide_skip">跳过</string>
    <string name="splash_start">开始体验</string>
    <string name="back">返回</string>
    <string name="not_login">未登录</string>
    <string name="press_again_exit">再按一次退出</string>


    <string-array name="tab_home_titles">
        <item>首页</item>
        <item>投资理财</item>
        <item>实物理财</item>
        <item>我的财富</item>
    </string-array>

    <string-array name="tab_about_titles">
        <item>公司简介</item>
        <item>管理团队</item>
        <item>战略合作</item>
        <item>媒体报道</item>
        <item>行业动态</item>
    </string-array>

    <string-array name="tab_trading_record_titles">
        <item>全部</item>
        <item>投资理财</item>
        <item>实物理财</item>
        <item>充值</item>
        <item>提现</item>
    </string-array>

    <string-array name="tab_coupons_package_titles">
        <item>可使用</item>
        <item>已使用</item>
        <item>已过期</item>
    </string-array>

    <string-array name="tab_entity_titles">
        <item>黄金产品</item>
        <item>钻石产品</item>
    </string-array>

    <!--login page-->
    <string name="text_login_title">使用小额贷即可登录</string>
    <string name="text_hint_login_name">请输入手机号/邮箱名/用户名</string>
    <string name="text_hint_login_pwd">请输入登录密码</string>
    <string name="text_login">登  录</string>
    <string name="text_sign">注 册</string>
    <string name="text_forget_pwd">忘记密码?</string>

    <!--sign page-->
    <string name="text_finish">完　成</string>
    <string name="text_sign_title">欢迎使用小额贷</string>
    <string name="text_sign_subtitle">使用手机号注册小额贷帐号</string>
    <string name="text_sign_get_auth_code">获取验证码</string>
    <string name="text_sign_get_invite_code">获取邀请码</string>
    <string name="text_sign_hint_phone">请输入手机号(仅支持中国大陆号码)</string>
    <string name="text_sign_hint_auth_code">请输入短信验证码</string>
    <string name="text_sign_hint_pwd">请设置密码</string>
    <string name="text_sign_hint_invite_code">请输入邀请码</string>
    <string name="text_sign_tip">点击"完成",即表示您以阅读并同意《小额贷注册协议》</string>
    <string name="text_sign_success">注册成功</string>
    <string name="text_sign_success_tip">赶快登录使用小额贷吧</string>

    <!--home page-->
    <string name="more">更多</string>

    <!--mine page-->
    <string name="member_center">会员中心</string>
    <string name="to_invest">去投资</string>
    <string name="total_assets">总资产(元)</string>
    <string name="available_assets">可用资产(元)</string>
    <string name="withdraw">提现</string>
    <string name="recharge">充值</string>
    <string name="my_account_bill">我的账单</string>
    <string name="record">交易记录</string>
    <string name="my_invitation">我的邀请</string>
    <string name="my_credits">我的积分</string>
    <string name="coupon">优惠券</string>

    <!--invest-->
    <string name="invest_title">投资理财</string>
    <!--entity-->
    <string name="entity_title">实物理财</string>

    <!-- card -->
    <string name="card_invest">立即投资</string>
    <string name="card_toast_left">历史年化收益</string>
    <string name="card_toast_right">随时可退，满30天免手续费</string>
    <string name="card_tag_new">新手必投</string>
    <string name="card_tag_share">季度分红</string>
    <string name="card_tag_safe">多重保障</string>

    <!--about-->
    <string name="about_pettyloan">关于小额贷</string>
    <string name="about_established_in">成立于</string>
    <string name="about_headquarters_location">总部位于</string>
    <string name="about_petty_loan">小额贷</string>
    <string name="about_chronicle_of_events">小额贷大事记</string>
    <string name="about_company_registration_information">公司注册信息</string>

    <!--product detail-->
    <string name="detail_tip_middle">历史年化收益率</string>
    <string name="detail_tip_bottom_1">随时可退</string>
    <string name="detail_tip_bottom_2">满30天免手续费</string>
    <string name="detail_item_title_1">开放额度</string>
    <string name="detail_item_title_２">收益计算</string>
    <string name="detail_item_title_３">历史年化收益率图</string>
    <string name="detail_item_title_４">交易规则</string>
    <string name="detail_item_title_５">投团数据</string>
    <string name="detail_item_title_６">常见问题</string>
    <string name="detail_item_title_７">了解详情</string>
    <string name="detail_service_charge">手续费</string>
    <string name="detail_service_charge_tip">投资未满30天(含30天)转让债权，手续费为转让金额的2%.</string>
    <string name="detail_bottom_tip">%1$s张优惠券可使用</string>
    <string name="detail_invest_earning">投资%1$s天，收益%1$s元</string>
    <string name="detail_item_tip">投资当日开始计息，次日到帐，每日如此直至完成债权转让退出．\n每日到帐收益会因项目实际还款情况浮动．</string>
    <string name="detail_title_caculator_title">收益计算器</string>
    <string name="detail_title_caculator_invest_acounts">投资金额</string>
    <string name="detail_title_caculator_hold_time">持有时间</string>
    <string name="detail_title_caculator_hold_time_switch">持有时间</string>
    <string name="detail_title_caculator_hold_days">持有天数</string>
    <string name="detail_title_caculator_out_fee">退团手续费</string>
    <string name="detail_title_caculator_prospective_earning">预期收益</string>

    <!--total assets-->
    <string name="assets_title_account_overview">账户总览</string>
    <string name="assets_total_account">月末总资产(元)</string>
    <string name="assets_month_earning">本月收益(元)</string>
    <string name="assets_assets_distribution">资产分布(元)</string>
    <string name="assets_available_balance">可用余额</string>
    <string name="assets_transit_money">在途资金</string>
    <string name="assets_hold_money">持有本金</string>
    <string name="assets_title_hold_money">持有本金(元)</string>
    <string name="assets_title_month_account_overview">本月交易总览</string>

    <!--pay page-->
    <string name="pay_open_amount">开放额度</string>
    <string name="pay_current_amount">当前额度余额</string>
    <string name="pay_invest_amount">投资金额</string>
    <string name="pay_select_way">选择支付方式</string>
    <string name="pay_sure">确认支付</string>
    <string name="pay_sure_tip_check">我已同意以下内容，并同意加盖本人电子签章</string>
    <string name="pay_sure_tip_detail">用户明确并同意其使用APP，手机APP网络服务所存在的风险将完全由其本人\n
    承担；因其使用APP手机APP网络服务而产生的一切后果也由其本人承担，\n
    APP手机APP对此不承担任何责任。</string>

    <!--recharge page-->
    <string name="recharge_available_balance">可用余额(元)</string>
    <string name="recharge_amount">充值金额</string>
    <string name="recharge_amount_input_hint">请输入充值金额</string>
    <string name="recharge_select_way">选择充值方式</string>
    <string name="recharge_add_bank_card">添加银行卡</string>
    <string name="recharge_add_bank_card_tip">充值提现一卡搞定，更安全便捷</string>
    <string name="recharge_wechat_pay">微信支付</string>
    <string name="recharge_wechat_pay_tip">进入微信完成支付</string>
    <string name="recharge_sure">确认充值</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="withdraw_amount_input_hint">请输入提现金额</string>
    <string name="withdraw_sure">确认提现</string>

    <!--my invitation page-->
    <string name="invite_record">邀请记录</string>
    <string name="invite_rightnow">立即邀请</string>
    <string name="invite_history">邀请历史</string>
    <string name="invite_bonus_pre_tax">税前奖金(元)</string>
    <string name="invite_coupons">优惠券(张)</string>
    <string name="invite_investment_friends">投资好友(人)</string>

    <!--coupons package page-->
    <string name="coupon_directions_for_use">使用说明</string>

    <!--my credits page-->
    <string name="credits_title">我的积分</string>
    <string name="credits_pettyloan_credits">我的小额贷积分:%1$s</string>
    <string name="credits_to_exchange">去兑换</string>
    <string name="credits_list_title_tip">赚点积分，机会多多</string>
    <string name="credits_exchange_rightnow">立即兑换</string>

    <!--my setting page-->
    <string name="setting_title">我的设置</string>
    <string name="setting_avatar">头像</string>
    <string name="setting_use_id">用户ID</string>
    <string name="setting_realname_authentication">实名认证</string>
    <string name="setting_authentication_no">未认证</string>
    <string name="setting_authentication_yes">已认证</string>
    <string name="setting_bank_card">银行卡</string>
    <string name="setting_bank_card_no">未绑定</string>
    <string name="setting_bank_card_yes">已绑定</string>
    <string name="setting_phone_number">手机号码</string>
    <string name="setting_change_login_pwd">修改登录密码</string>
    <string name="setting_set_trading_pwd">设置交易密码</string>
    <string name="setting_text_size">字体大小</string>
    <string name="setting_risk_assessment">风险评测</string>
    <string name="setting_risk_assessment_go">去测试</string>
    <string name="setting_about_pettyloan">关于小额贷</string>
    <string name="setting_exit_safely">安全退出</string>
    <string name="setting_current_version">当前版本 %1$s</string>
    <string name="setting_share_to_friends">分享小额贷给好友</string>
    <string name="setting_go_grade">去评分</string>


    <!--my message page-->
    <string name="msg_title">我的消息</string>
    <string name="msg_notice">公告中心</string>
    <string name="msg_notice_item_title">新消息提醒</string>
    <string name="msg_notice_item_content">感觉身体被掏空？打开"发现"进入活动，掏空满载奖品等你来拿，体验金等你来拿，
    快来看看！【小额贷】</string>

    <!--realname auth page-->
    <string name="text_realname_auth_top_tip">为保障资金交易安全，投资前须验证实名，请务必填写您本人真实信息</string>
    <string name="text_realname_auth_hint_user_name">请输入真实姓名</string>
    <string name="text_realname_auth_hint_id_card">请输入身份证号码</string>
    <string name="text_realname_auth_sure">确认</string>

    <!-- webview -->
    <string name="webview_refresh">刷新</string>
    <string name="webview_open_with_browser">在浏览器中打开</string>

     <string name="large_text">
         从供应链业务起家，第一款主打产品便是海尔体系内的供应链金融，\n
         当然不可避免会涉及到海尔系统内部供应商及经销商，由于和海尔成员企业的密切合作，\n
         所以从生产、采购、销售、运输到库存，能够做到全流程跟踪，与海尔系统内ERP系统对接，\n
         海融易风控可以按照这些大数据准确判断贷款企业属于负债经营还是属于健康扩大再生产状况，\n
         从而有效地进行贷前尽调和贷后管控。\n\n
         在体系外的其他行业中，是否也拥有同样的机会?王伟自信地说道：\n
         “经研究，我们决定向海尔体系外实体产业进行扩张，\n
         方法是主打核心企业，这些企业部分是通过海尔大供应商资源，\n
         部分是在行业当中排名资质较好的核心企业，\n
         紧接着再往核心企业的上下游两端去扩张，这是我们供应链金融的思路，而海融易还有着自有独特的产业风控体系。\n\n
         进入这个领域，首先有庞大的用户群。\n
         第一层的用户群前期在海融易平台已经积累240万用户，这个是金融财富管理投资用户，\n
         其次是海尔在过去30年积累下来的两亿用户。同时，要加强自身专业产品配置、人员配置和服务的能力，\n
         去积累或者加强在各类产品上的一些能力，从另类产品、固收产品、股权、海外资产这几个方向找空间。\n\n
         据悉，除了供应链金融，投贷联动也是乐赚金服未来的一个业务方向。\n\n
         王伟介绍说，兄弟公司海尔资本有着非常丰富经验的操盘团队，市场投入方向明确，\n
         未来专注的领域可能在大消费，智能家居、金融科技和文化等产业。\n\n
    </string>

    <string-array name="test_company_chronicle_of_events">
        <item>2014年10月，新鸿基战略投资小额贷，之后新鸿基旗下亚洲联合财务与小额贷达成战略合作</item>
        <item>2015年8月20日，新鸿基战略投资小额贷，之后新鸿基旗下亚洲联合财务与小额贷达成战略合作</item>
        <item>2016年8月20日，新鸿基战略投资小额贷，之后新鸿基旗下亚洲联合财务与小额贷达成战略合作</item>
    </string-array>

    <!-- 共享过度动画 -->
    <string name="transition_banner">transition_animation_banner</string>

</resources>
