<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/toolbar_margintop"
        android:background="@color/transparent"
        app:navigationIcon="@drawable/icon_back_blue"
        app:theme="@style/ToolbarTheme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_margin"
        android:layout_marginTop="20dp"
        android:text="@string/text_sign_title"
        android:textColor="@color/text_blue"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_margin"
        android:layout_marginTop="5dp"
        android:text="@string/text_sign_subtitle"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_size_13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/page_margin"
            android:paddingRight="@dimen/page_margin"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:textColorHint="@color/text_gray_light">

            <EditText
                android:id="@+id/text_input_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/text_sign_hint_phone"
                android:inputType="number"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_13" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_get_auth_code"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_selecter_blue_stroke"
            android:text="@string/text_sign_get_auth_code"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_authcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/page_margin"
        android:paddingRight="@dimen/page_margin"
        android:textColorHint="@color/text_gray_light">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_authcode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/text_sign_hint_auth_code"
            android:inputType="textPassword"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_13" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/page_margin"
        android:paddingRight="@dimen/page_margin"
        android:textColorHint="@color/text_gray_light">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/text_sign_hint_pwd"
            android:inputType="textPassword"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_13" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_invite_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/page_margin"
            android:paddingRight="@dimen/page_margin"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:textColorHint="@color/text_gray_light">

            <EditText
                android:id="@+id/text_input_invite_code"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/text_sign_hint_invite_code"
                android:inputType="number"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_13" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_get_invite_code"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_selecter_blue_stroke"
            android:text="@string/text_sign_get_invite_code"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_sign_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_margin"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/icon_star"
        android:drawablePadding="5dp"
        android:text="@string/text_sign_tip"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_size_13" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_selecter_blue_solid"
        android:text="@string/text_finish"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15" />
</LinearLayout>