<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_earning_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detail_margin_horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:drawableRight="@drawable/icon_calculator"
        android:gravity="center_vertical"
        android:text="@string/detail_item_title_２"
        android:textSize="@dimen/detail_text_size_large" />

    <ImageView
        android:id="@+id/iv_earning"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/tv_earning_title"
        android:scaleType="centerInside"
        android:src="@drawable/pic_earning" />

    <TextView
        android:id="@+id/tv_earning_toast_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_earning"
        android:layout_marginLeft="@dimen/detail_margin_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/detail_invest_earning"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_size_12" />

    <TextView
        android:id="@+id/tv_earning_toast_bottom_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_earning_toast_bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/detail_margin_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/card_toast_right"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_size_12" />

    <RelativeLayout
        android:id="@+id/rl_earning_invest"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tv_earning_toast_bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="@dimen/detail_margin_horizontal"
        android:background="@drawable/bg_btn_selecter_blue_stroke"
        android:padding="1dp">

        <TextView
            android:id="@+id/tv_invest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/to_invest"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/detail_text_size_small"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

</RelativeLayout>