<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        android:layout_marginTop="@dimen/toolbar_margintop"
        app:navigationIcon="@drawable/icon_close"
        app:theme="@style/ToolbarTheme" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_login_banner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/text_login_title"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_size_15" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:textColorHint="@color/text_gray_light">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/text_hint_login_name"
            android:inputType="number"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_13" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_authcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/page_margin"
        android:paddingRight="@dimen/page_margin"
        android:textColorHint="@color/text_gray_light"
        app:passwordToggleDrawable="@drawable/icon_login_pwd"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/text_blue">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_authcode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/text_hint_login_pwd"
            android:inputType="textPassword"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_13" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_margin"
        android:layout_marginRight="@dimen/page_margin"
        android:layout_marginTop="84dp"
        android:background="@drawable/bg_btn_selecter_blue_solid"
        android:text="@string/text_login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_forget_pwd"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_size_13" />
</LinearLayout>